# Context_Engineering

./: .gitignore  DOCUMENTATION.md  README.md  pyproject.toml
context_offloading/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  report.md
context_offloading/.git_backup_repo/: COMMIT_EDITMSG  FETCH_HEAD  config  index
context_offloading/.git_backup_repo/logs/: HEAD
context_offloading/.git_backup_repo/logs/refs/heads/: main
context_offloading/.git_backup_repo/refs/heads/: main
context_offloading/.git_backup_repo/refs/remotes/origin/: main
context_offloading/knowledge/: user_preference.txt
context_offloading/src/context_offloading/: crew.py  main.py
context_pruning/: IMPLEMENTATION_NOTES.md  QUICKSTART.md  README.md  SUMMARY.txt  VISUAL_GUIDE.md  context_pruning_result.md  pyproject.toml  test_setup.py
context_pruning/src/context_pruning/: crew.py  main.py
context_pruning/src/context_pruning/config/: agents.yaml  tasks.yaml
context_pruning/src/context_pruning/tools/: __init__.py  custom_tool.py
how_to_fix_your_context/: README.md
how_to_fix_your_context/.git_backup_repo/: FETCH_HEAD  config  index  packed-refs
how_to_fix_your_context/.git_backup_repo/logs/refs/heads/: main
how_to_fix_your_context/.git_backup_repo/objects/pack/: pack-082e6d4675dadb653bcaf20b60c756ef3625178c.idx  pack-082e6d4675dadb653bcaf20b60c756ef3625178c.pack
how_to_fix_your_context/.git_backup_repo/refs/heads/: main
knowledge/: scratchpad.json  user_preference.txt
src/context_offloading/: crew.py
src/context_offloading/config/: agents.yaml  tasks.yaml
src/context_offloading/tools/: custom_tool.py
tools_context_engineering/: .env.example  LEARNING_GUIDE.md  README.md  demo_agent.py  requirements.txt
(+3 files in other folders)
