[project]
name = "context_pruning"
version = "0.1.0"
description = "context_pruning using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
]

[project.scripts]
context_pruning = "context_pruning.main:run"
run_crew = "context_pruning.main:run"
train = "context_pruning.main:train"
replay = "context_pruning.main:replay"
test = "context_pruning.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
